--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<!-- One -->
 			<section id="one" class="wrapper style2 spotlights">
 				<section>
-					<a href="#" class="image"><img src="images/1726297810450.jpeg" alt="Professional Experience" data-position="center center" /></a>
+					<a href="#" class="image"><img src="images/IMG_5421.jpg" alt="Professional Experience" data-position="center center" /></a>
 					<div class="content">
 						<div class="inner">
 							<h2>Professional Experience</h2>
@@ -91,7 +91,7 @@
 				</section>
 
 				<section>
-					<a href="#" class="image"><img src="images/IMG_5421.jpg" alt="Education" data-position="top center" /></a>
+					<a href="#" class="image"><img src="images/pic04.jpg" alt="Education" data-position="top center" /></a>
 					<div class="content">
 						<div class="inner">
 							<h2>Education</h2>
