--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About Me</h2>
-								<!-- <span class="image main"><img src="images/pic01.jpg" alt="Suvin Singh" /></span> -->
+								<span class="image main"><img src="images/IMG_5421.jpg" alt="Suvin Singh" /></span>
 								<p>Hi, I’m Suvin Singh, currently working as a Data Analyst at Deloitte US India. I’ve previously held roles as a Python Developer at Prorigo Software and an LLM Developer Intern at Toshiba Mitsubishi-EIC India.</p>
 								<p>I’m a Computer Science student at Vellore Institute of Technology with a passion for AI, large language models (LLMs), and Python development. I’m constantly looking to deepen my expertise in machine learning, cloud computing, and AI technologies, aiming to build solutions that are both technically sound and business-oriented.</p>
 								<p>Check out my <a href="#experience">professional experience</a>, <a href="#projects">projects</a>, and <a href="#skills">technical skills</a> to learn more about my work.</p>
